test/errors/lexer/token_string.ms
s = "Hello
world!"

x = 5$&@*!
